--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,17 @@
 
 .mat-toolbar {
   gap: 10px;
+
+  > a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    
+    > img {
+      height: 35px;
+      width: 35px;
+      margin-right: 10px;
+    }
+  }
 }
