--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,10 @@ $app-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+main {
+  max-width: 1080px;
+  margin: 0 auto;
+  padding: 20px;
+  min-height: 80%;
+}
