--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,23 +1,3 @@
-<main>
-  <mat-card
-    *ngFor="let restaurant of restaurantsList"
-    class="restaurant-card"
-  >
-    <mat-card-header class="header">
-      <mat-card-title class="title">{{ restaurant.name }}</mat-card-title>
-      <mat-card-subtitle class="subtitle">{{ restaurant.address }}&comma;&nbsp;{{ restaurant.cap }}&nbsp;{{ restaurant.city}}</mat-card-subtitle>
-    </mat-card-header>
-
-    <img mat-card-image src="{{ restaurant.header }}" alt="banner-image">
-    <mat-card-content>
-      <p>
-        {{ restaurant.description }}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>SEE MORE</button>
-    </mat-card-actions>
-  </mat-card>
-</main>
+<app-restaurant-card *ngFor="let restaurant of restaurantsList" [restaurant]="restaurant"></app-restaurant-card>
 
 
