--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,26 @@
-<p>profil works!</p>
+<main>
+  <mat-card>
+    <mat-card-title>Profile</mat-card-title>
+    <mat-card-content class="profile">
+      <form [formGroup]="updateUserForm" (ngSubmit)="submitForm()">
+
+        <mat-form-field appearance="outline">
+          <mat-label>First Name</mat-label>
+          <input class="input" matInput placeholder="John" formControlName="first_name">
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>Last Name</mat-label>
+          <input class="input" matInput placeholder="Doe" formControlName="last_name">
+        </mat-form-field>
+
+      </form>
+      <img src="{{ userInfo.picture }}" alt="" width="300" height="300">
+    </mat-card-content>
+
+    <mat-card-actions align="end">
+      <button type="submit" mat-flat-button color="primary" (click)="submitForm()" [disabled]="firstName?.invalid || lastName?.invalid">Submit</button>
+    </mat-card-actions>
+  </mat-card>
+
+</main>
