--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -5,15 +5,24 @@
   padding: 20px;
 
   > form {
-    display: flex;
-    flex-direction: column;
 
-    > .input {
-      width: 100%;
-    }
+
   }
 
   > img {
     max-width: 300px;
+    border-radius: 50%;
   }
+}
+
+.user-form {
+  width: 100%;
+  margin: 0 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.input {
+  width: 100%;
 }
