--- a/src/app/components/restaurant/restaurant-card/restaurant-card.component.html
+++ b/src/app/components/restaurant/restaurant-card/restaurant-card.component.html
@@ -18,6 +18,6 @@
   </mat-chip-list>
 
   <mat-card-actions align="end">
-    <button type="button" mat-raised-button>SEE MORE</button>
+    <a mat-raised-button color="primary" target="_self" href="restaurant/{{ restaurant.id }}">SEE MORE</a>
   </mat-card-actions>
 </mat-card>
