--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <form class="search-bar-form">
   <mat-form-field appearance="fill" class="search-bar" >
     <mat-label>Search a restaurant</mat-label>
-    <input matInput #message maxlength="32" placeholder="Restaurant name..." (input)="onSearchChange(message.value)">
+    <input matInput #message maxlength="32" placeholder="Restaurant name, city, CAP..." (input)="onSearchChange(message.value)">
     <mat-hint align="end">{{ message.value.length }} / 32</mat-hint>
   </mat-form-field>
 </form>
