--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,10 +1,11 @@
 <main>
+  <h2>Profile Settings</h2>
   <mat-card>
     <mat-card-content class="profile">
       <div>
         <img src="{{ userInfo?.picture }}" fallbackImage="assets/no_profile_picture.webp" alt="" width="300" height="300">
-        <input type="file" (change)="selectFile($event)" />
-        <button mat-flat-button color="primary" [disabled]="!selectedFiles" (click)="upload()">Upload{{ percentage !== 100 && percentage !== 0 ? 'ing ' + percentage + '%' : '' }}</button>
+        <input label="Upload an image" title="Upload" type="file" (change)="selectFile($event)" />
+        <button type="button" mat-flat-button color="primary" [disabled]="!selectedFiles" (click)="upload()">Upload{{ percentage !== 100 && percentage !== 0 ? 'ing ' + percentage + '%' : '' }}</button>
       </div>
 
       <form [formGroup]="updateUserForm" (ngSubmit)="submitForm()" class="user-form">
@@ -48,9 +49,25 @@
         </mat-form-field>
 
         <button type="submit" mat-flat-button color="primary" (click)="submitForm()" [disabled]="!isFormValid()">Submit</button>
-
       </form>
     </mat-card-content>
+  </mat-card>
+
+  <h2>Your Restaurants</h2>
+
+  <mat-card>
+    <ul>
+      <li *ngFor="let restaurant of restaurantsOwned" class="restaurant-links">
+        <span>{{ restaurant.name }}&nbsp;&dash;&nbsp;{{ restaurant.city }}</span>
+        <div>
+          <a mat-flat-button color="primary" href="/restaurant/{{ restaurant.id }}/edit">Edit</a>
+          <a mat-flat-button color="accent" href="/restaurant/{{ restaurant.id }}">Link</a>
+          <a mat-flat-button color="warn" href="/restaurant/{{ restaurant.id }}/delete">Delete</a>
+        </div>
+      </li>
+    </ul>
+
+    <div class="centered"><a align="center" mat-flat-button color="primary" href="/restaurant/new">Add Restaurant</a></div>
   </mat-card>
 
 </main>
