--- a/src/app/components/restaurant/restaurant-edit/restaurant-edit.component.html
+++ b/src/app/components/restaurant/restaurant-edit/restaurant-edit.component.html
@@ -1,1 +1,142 @@
-<p>restaurant-edit works!</p>
+<h1 align="center">{{ title }}</h1>
+
+<div class="header-section">
+  <img src="{{ restaurant?.header }}" fallbackImage="assets/no_header_picture.webp" alt="">
+  <input label="Upload an image" title="Upload" type="file" (change)="selectFile($event)" />
+  <button type="button" mat-flat-button color="primary" [disabled]="!selectedFiles" (click)="upload()">Upload{{ percentage !== 100 && percentage !== 0 ? 'ing ' + percentage + '%' : '' }}</button>
+</div>
+
+
+<form class="column" [formGroup]="updateRestaurantForm" (ngSubmit)="submitForm()">
+  <h2 align="center">Main Settings</h2>
+  <mat-form-field appearance="outline">
+    <mat-label>Name</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder="1 rue de la paix"
+      formControlName="name"
+    />
+    <mat-error *ngIf="name?.value === '' && name?.touched">Name can't be empty</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Address</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder="1 rue de la paix"
+      formControlName="address"
+    />
+    <mat-error *ngIf="address?.value === '' && address?.touched">Address can't be empty</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>CAP</mat-label>
+    <input
+      type="number"
+      matInput
+      placeholder="75000"
+      formControlName="cap"
+    />
+    <mat-error *ngIf="cap?.value === '' && cap?.touched">CAP can't be empty</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>City</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder="Paris"
+      formControlName="city"
+    />
+    <mat-error *ngIf="city?.value === '' && city?.touched">City can't be empty</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Description</mat-label>
+    <textarea
+      type="text"
+      matInput
+      placeholder="0,0"
+      formControlName="description"
+    ></textarea>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Labels</mat-label>
+    <mat-chip-list #chipList aria-label="Fruit selection">
+      <mat-chip *ngFor="let tag of tags" (removed)="removeLabel(tag)">
+        {{ tag }}
+        <button type="button" matChipRemove>
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </mat-chip>
+      <input placeholder="New label..."
+        [matChipInputFor]="chipList"
+        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+        [matChipInputAddOnBlur]="true"
+        (matChipInputTokenEnd)="addLabel($event)"
+      />
+    </mat-chip-list>
+  </mat-form-field>
+
+  <h2 align="center">Optional Settings</h2>
+
+  <h4>GPS Coordinates</h4>
+  <div class="row">
+    <mat-form-field appearance="outline" class="row-input left">
+      <mat-label>Latitude</mat-label>
+      <input
+        type="number"
+        matInput
+        placeholder="0,0"
+        formControlName="latitude"
+      />
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="row-input right">
+      <mat-label>Longitude</mat-label>
+      <input
+        type="number"
+        matInput
+        placeholder="0,0"
+        formControlName="longitude"
+      />
+    </mat-form-field>
+  </div>
+
+  <h4>Phone Number</h4>
+  <mat-form-field appearance="outline">
+    <mat-label>Link the restaurant's phone</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder="+33612345678"
+      formControlName="phone"
+    />
+  </mat-form-field>
+
+  <h4>Email</h4>
+  <mat-form-field appearance="outline">
+    <mat-label>Link the restaurant's email</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder="example@domain.com"
+      formControlName="email"
+    />
+  </mat-form-field>
+
+  <h4>Website</h4>
+  <mat-form-field appearance="outline">
+    <mat-label>Link the restaurant's website</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder="example.com"
+      formControlName="website"
+    />
+  </mat-form-field>
+
+  <button class="submit-btn" type="submit" mat-flat-button color="primary" (click)="submitForm()" [disabled]="!isFormValid()">Submit</button>
+</form>
