--- a/src/app/components/restaurant/restaurant.component.html
+++ b/src/app/components/restaurant/restaurant.component.html
@@ -7,7 +7,11 @@
     <mat-chip *ngFor="let tag of restaurantInfo?.tags">{{ tag }}</mat-chip>
   </mat-chip-list>
 
-  <a class="address" href="https://www.google.com/maps/@{{ restaurantInfo?.coordinates?.latitude }},{{ restaurantInfo?.coordinates?.longitude }},21z">
+  <a class="address" *ngIf="hasLink()" href="{{ getLink() }}">
+    <mat-icon class="icon">share_location</mat-icon>
+    {{ restaurantInfo?.address }}&comma;&nbsp;{{ restaurantInfo?.cap }}&nbsp;{{ restaurantInfo?.city}}
+  </a>
+  <a class="address" *ngIf="!hasLink()">
     <mat-icon class="icon">share_location</mat-icon>
     {{ restaurantInfo?.address }}&comma;&nbsp;{{ restaurantInfo?.cap }}&nbsp;{{ restaurantInfo?.city}}
   </a>
@@ -27,17 +31,18 @@
     </li>
     <li>
       <span class="label">Website</span>
-      <span class="value">{{ restaurantInfo?.website ?? 'No website' }}</span>
+      <span class="value">{{ restaurantInfo?.website !== '' ? restaurantInfo?.website : 'No website' }}</span>
     </li>
     <li>
       <span class="label">Email</span>
-      <span class="value">{{ restaurantInfo?.email ?? 'No email' }}</span>
+      <span class="value">{{ restaurantInfo?.email !== '' ? restaurantInfo?.email : 'No email' }}</span>
     </li>
     <li>
       <span class="label">GPS</span>
-      <span class="value">{{ restaurantInfo?.coordinates?.latitude ?? 'No latitude' }}<br>{{ restaurantInfo?.coordinates?.longitude ?? 'No longitude' }}</span>
+      <span class="value">{{ restaurantInfo?.coordinates?.latitude !== 0 ? restaurantInfo?.coordinates?.latitude : 'No latitude' }}<br>{{ restaurantInfo?.coordinates?.longitude !== 0 ? restaurantInfo?.coordinates?.longitude : 'No longitude' }}</span>
     </li>
   </ul>
 </div>
 
- 
+<div class="centered" *ngIf="isOwner()"><a align="center" mat-flat-button color="primary" href="/restaurant/{{ restaurantInfo?.id }}/edit">Edit</a></div>
+
